--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PortFolio</title>
-    <script src="https://kit.fontawesome.com/7555e2cb5d.js" crossorigin="anonymous"></script>
+    <title>Joe PortFolio</title>
     <!-- default favicon -->
     <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
     
