Finished Second Section

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     
     <!-- google tv favicon -->
     <link rel="icon" href="./src//assets/android-chrome-512x512.png" sizes="96x96" type="image/png">
-
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
