--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
     
     <!-- google tv favicon -->
     <link rel="icon" href="./src//assets/android-chrome-512x512.png" sizes="96x96" type="image/png">
-    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600&display=swap" rel="stylesheet">
+      <link
+        href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
